# bank

./: .gitignore  README.md  alembic.ini  create_fake_orders.py  pyproject.toml
docker/: .env.example  Dockerfile  docker-compose.tests.yml  docker-compose.yml
src/: celery_app.py  db_models.py  main.py  schemas.py  services.py  settings.py  tasks.py
src/api/: bank_client.py  bank_client_exceptions.py
src/api/orders/: routers.py  services.py
src/api/payment/: exceptions.py  routers.py  services.py
src/migrations/: env.py
src/migrations/versions/: 709daf4a9c6a_add_models_order_and_payment.py  a4f3a4a98720_add_bank_state_fields_to_payments.py
tests/: conftest.py  test_payments_api.py
