[project]
name = "bank"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "celery>=5.6.2",
    "dotenv>=0.9.9",
    "fastapi>=0.135.1",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "redis>=7.2.1",
    "sqlalchemy>=2.0.48",
    "uvicorn>=0.41.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.5",
]

[tool.ruff]
line-length = 88
exclude = [
    "src/migrations",
]

lint.fixable = ["ALL"]
lint.select = [
    "E",  # All errors
    "W",  # All warnings
    "PIE",  # All flake8-pie
    "RET",  # All flake8-return
    "PLE",  # All Errors from Pylint
    "F401",  # unused-import
    "F541",  # f-string-missing-placeholders
    "F841",  # unused-variable
    "I001",  # isort: unsorted-imports
    "I002",  # isort: missing-required-import
    ]

[tool.ruff.lint.isort]
known-first-party = ["smartcms"]
known-third-party = ["pydantic", "fastapi", "sqlalchemy", "asyncpg", "jinja2"]

[tool.ruff.format]
indent-style = "space"
quote-style = "double"
